--- a/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.html
+++ b/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.html
@@ -14,7 +14,7 @@
       <div class="user-raiting-wrapp">
         <p class="star-raiting">{{ offerData.raiting }}<span class="user-comments">({{ offerData.comments_count }} +отзывов)</span></p>
       </div>
-      <div class="onlineStatus">Oнлайн</div>
+      <div class="onlineStatus online">Oнлайн</div>
     </div>
     <div class="actions">
       <div class="action tooltip" data-title="Смотреть профиль">
