--- a/src/app/service-page/components/service-page-another-services/service-page-another-services.component.scss
+++ b/src/app/service-page/components/service-page-another-services/service-page-another-services.component.scss
@@ -4,6 +4,7 @@
   font-size: 24px;
   line-height: 30px;
   color: #323c47;
+  font-family: "Source Sans Pro", sans-serif;
 }
 .cards-list {
   display: flex;
