--- a/src/app/service-page/components/service-page/service-page.component.html
+++ b/src/app/service-page/components/service-page/service-page.component.html
@@ -1,18 +1,22 @@
 <app-main-header></app-main-header>
 <app-categories-header></app-categories-header>
-<nav class="navigation_page">
-  <div class="wrapper">
-    <ul>
-      <li>Портфолио</li>
-      <li>пакеты и услуги</li>
-      <li>описание</li>
-      <li>рейтинг</li>
-      <li>отзывы</li>
-      <li>Вопросы и ответы</li>
-      <li>О фрилансере</li>
-    </ul>
-  </div>
-</nav>
+
+  <nav class="navigation_page" #stickyMenu [class.sticky] = "sticky">
+  <!-- <nav class="navigation_page" #stickyMenu [ngClass] = "{'sticky': sticky}"> -->
+    <div class="wrapper">
+      <ul>
+        <li>Портфолио</li>
+        <li>пакеты и услуги</li>
+        <li>описание</li>
+        <li>рейтинг</li>
+        <li>отзывы</li>
+        <li>Вопросы и ответы</li>
+        <li>О фрилансере</li>
+      </ul>
+    </div>
+  </nav>
+
+
 
 <div class="wrapper">
   <div class="bread-crumbs">
@@ -75,36 +79,7 @@
         <p>{{ offerData.description }}</p>
       </div>
 
-      <section class="compare">
-        <h4 class="section-title">
-          Сравните и выберите вариант пакета услуг
-        </h4>
-        <div class="table">
-          <div class="table-titles">
-            <div class="table-cell"></div>
-            <div class="table-cell">Базовый</div>
-            <div class="table-cell">Cандарт</div>
-            <div class="table-cell">Премиум</div>
-          </div>
-          <div class="table-item">
-            <div class="table-cell title-cell">Название услуги</div>
-            <div class="table-cell">Дизайн сайта</div>
-            <div class="table-cell">Дизайн сайта + адапт</div>
-            <div class="table-cell">Логотип+ дизайн сайта
-              + адапт</div>
-          </div>
-          <div class="table-item">
-            <div class="table-cell title-cell">Краткое описание</div>
-            <div class="table-cell">Сайты содержат различную статику, которая как и HTML-файл не генерируется на лету.
-              Чаще всего это картинки, CSS-файлы, JS-скрипты, но могут быть и любые другие файлы: mp3, mov, csv, pdf.
-            </div>
-            <div class="table-cell">Сайты содержат различную статику, которая как и HTML-файл не генерируется на лету.
-              Чаще всего это картинки, CSS-файлы.</div>
-            <div class="table-cell">Сайты содержат различную статику, которая как и HTML-файл не генерируется на лету.
-            </div>
-          </div>
-        </div>
-      </section>
+      <app-service-page-compare-table [offerData]="offerData" *ngIf="offerData" ></app-service-page-compare-table>
 
       <section class="offer-raiting">
         <h4 class="section-title">
