--- a/src/app/service-page/components/service-page-packages/service-page-packages.component.scss
+++ b/src/app/service-page/components/service-page-packages/service-page-packages.component.scss
@@ -7,7 +7,8 @@
     height: 53px;
   }
   .tabContentContainer{
-    margin-bottom: 14px;
+    margin-bottom: 7px;
+    box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.2);
   }
   .tab {
     display: flex;
@@ -23,8 +24,8 @@
     font-family: "Source Sans Pro";
     letter-spacing: 0.8px;
     font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
+    font-weight: 600;
+    font-size: 14px;
     line-height: 21px;
     color: #323c47;
     text-align: center;
@@ -48,7 +49,7 @@
   .tabContent {
     background: #ffffff;
     border: 1px solid rgba(220, 224, 230, 0.1);
-    box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.2);
+    // box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.2);
     border-radius: 3px;
     display: flex;
     flex-direction: column;
@@ -143,7 +144,7 @@
           font-size: 18px;
           line-height: 117%;
           color: #707683;
-          opacity: 0.5;
+          opacity: 0.3;
 
           padding-left: 30px;
           position: relative;
@@ -176,7 +177,7 @@
   .btn-order-service {
     font-style: normal;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 18px;
     color: #4285f4;
     text-align: center;
@@ -195,8 +196,8 @@
 
 .btn-options{
   font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
+  font-weight: 600;
+  font-size: 16px;
   line-height: 117%;
   color: #3C7EEA;
   text-align: center;
