--- a/src/app/service-page/components/service-page/service-page.component.html
+++ b/src/app/service-page/components/service-page/service-page.component.html
@@ -222,5 +222,6 @@
       </div>
     </div>
     <app-service-page-another-services [offerData]="offerData" *ngIf="offerData"></app-service-page-another-services>
+    <app-service-page-earlier-viewed [offerData]="offerData" *ngIf="offerData"></app-service-page-earlier-viewed>
   </div>
 </div>
