--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fifth-step-creation/fifth-step-creation.component.scss
@@ -8,6 +8,15 @@ form ::ng-deep {
   flex-direction: column;
   width: 66%;
 
+  form {
+    width: 100%;
+    .el {
+      background: #f4f7fc;
+      border-radius: 3px 3px 0px 0px;
+      padding: 0 11px 0 11px;
+    }
+
+  }
   h3 {
     font-family: Source Sans Pro, sans-serif;
     font-style: normal;
@@ -15,6 +24,17 @@ form ::ng-deep {
     font-size: 18px;
     line-height: 23px;
     color: #323c47;
+  }
+
+  h5 {
+    font-family: "Source Sans Pro", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #323c47;
+    text-transform: uppercase;
+    margin: 0 0 13px;
   }
 
   h6 {
@@ -26,14 +46,59 @@ form ::ng-deep {
     font-size: 16px;
     line-height: 20px;
     color: #323c47;
-    padding: 20px 100px 20px 24px;
+    padding: 20px 100px 20px 10px;
     margin: 0;
   }
+
+  &.hiddenItem {
+    margin-bottom: 30px;
+    .item-options {
+      display: block;
+      button {
+        border: none;
+        background: none;
+        margin-right: 22px;
+        color: #c2cfe0;
+        padding: 0;
+        cursor: pointer;
+        & > i {
+          font-size: 17px;
+        }
+        &.change:hover {
+          color: #3c7eea;
+        }
+        &.delete:hover {
+          color: #ff647c;
+        }
+      }
+    }
+    .question-title {
+      height: 0;
+      padding: 0;
+      margin: 0;
+    }
+    .fields {
+      height: 0;
+      overflow: hidden;
+      margin: 0;
+      padding: 0;
+    }
+  }
+
+  .item-options {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    display: none;
+  }
+
   .breef-item {
-    background: #f4f7fc;
-    border-radius: 3px 3px 0px 0px;
-    padding: 9px 9px 24px 9px;
+    // background: #f4f7fc;
+    // border-radius: 3px 3px 0px 0px;
+    // padding: 0 11px 0 11px;
     margin-bottom: 25px;
+    position: relative;
     .item-count {
       font-family: Source Sans Pro, sans-serif;
       font-size: 14px;
@@ -49,6 +114,7 @@ form ::ng-deep {
       border: 1px solid #dce0e6;
       background-color: #ffffff;
       margin-bottom: 25px;
+      position: relative;
       textarea {
         width: 100%;
         height: 100%;
@@ -59,6 +125,23 @@ form ::ng-deep {
         line-height: 20px;
         color: #33596e;
         border: none;
+        &::placeholder {
+          opacity: 0.5;
+        }
+        &::-ms-input-placeholder {
+          opacity: 0.5;
+        }
+      }
+      span {
+        position: absolute;
+        right: 0;
+        bottom: -22px;
+        font-family: Source Sans Pro, sans-serif;
+        font-size: 14px;
+        line-height: 18px;
+        text-align: center;
+        color: #33596e;
+        opacity: 0.5;
       }
     }
     .options {
@@ -177,18 +260,29 @@ form ::ng-deep {
           color: #323c47;
 
           &.mat-error {
-            color: #f44336;
+            color: #f44336 !important;
           }
         }
 
         mat-select {
-
           border-radius: 3px;
           font-size: 16px;
           line-height: 21px;
           color: #323c47;
         }
+        &.mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid
+          .mat-form-field-outline-thick {
+          color: #f44336 !important;
+          div {
+            color: #f44336 !important;
+          }
+        }
       }
+      //     mat-form-field .mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid::ng-deep .mat-form-field-outline-thick {
+      //       div {
+      //  color: #f44336 !important;
+      //       }
+      //      }
     }
 
     // -----------------------------------------
@@ -203,10 +297,14 @@ form ::ng-deep {
       .mat-form-field-infix {
         border: none;
       }
-    }
-
-    .mat-form-field-invalid .mat-input-element {
-      caret-color: #323c47;
+      &.mat-form-field-invalid {
+        .mat-input-element {
+          // caret-color: #323c47;
+        }
+        // .mat-form-field-outline-thick {
+        //   border-color: #f44336 !important;
+        // }
+      }
     }
 
     .mat-form-field-outline:first-of-type {
@@ -222,10 +320,11 @@ form ::ng-deep {
       height: 43px;
       margin-bottom: 15px;
       padding: 10px;
-      border: 1px solid #DCE0E6;
+      border: 1px solid #dce0e6;
       box-sizing: border-box;
       border-radius: 4px;
       background: #fff;
+      position: relative;
       input {
         width: 100%;
         height: 100%;
@@ -233,26 +332,42 @@ form ::ng-deep {
         font-family: Source Sans Pro, sans-serif;
         font-size: 16px;
         line-height: 20px;
-        color: #33596E;
+        color: #33596e;
         outline: none;
 
-        &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        &::-webkit-input-placeholder {
+          /* Chrome/Opera/Safari */
           opacity: 0.5;
         }
-        &::-moz-placeholder { /* Firefox 19+ */
+        &::-moz-placeholder {
+          /* Firefox 19+ */
           opacity: 0.5;
         }
-        &:-ms-input-placeholder { /* IE 10+ */
+        &:-ms-input-placeholder {
+          /* IE 10+ */
           opacity: 0.5;
         }
-        &:-moz-placeholder { /* Firefox 18- */
+        &:-moz-placeholder {
+          /* Firefox 18- */
           opacity: 0.5;
         }
       }
+      .clear {
+        right: -40px;
+        position: absolute;
+        transform: translateY(-50%);
+        top: 50%;
+        border: none;
+        color: red;
+        background-color: transparent;
+        outline: none;
+        cursor: pointer;
+      }
+    }
+    .multi {
+      padding-right: 40px;
     }
     .add-question {
-
-
       button {
         padding: 0;
         display: flex;
@@ -265,7 +380,6 @@ form ::ng-deep {
           margin-right: 16px;
         }
         margin-bottom: 18px;
-
       }
       label {
         margin: 0 0;
@@ -294,6 +408,7 @@ form ::ng-deep {
       display: flex;
       justify-content: flex-end;
       margin-top: 14px;
+      margin-bottom: 25px;
       button {
         font-weight: 600;
         font-size: 14px;
@@ -341,6 +456,45 @@ form ::ng-deep {
 
   // -----------------buttons ----------------------//
 
+  .add-breef {
+    margin-top: 25px;
+    button {
+      padding: 0;
+      display: flex;
+      align-items: center;
+      text-transform: none;
+      font-size: 16px;
+      line-height: 20px;
+      i {
+        font-size: 16px;
+        margin-right: 16px;
+      }
+      margin-bottom: 18px;
+    }
+    label {
+      margin: 0 0;
+      padding: 0;
+    }
+    .comment {
+      display: flex;
+      p {
+        margin: 0 0 0 15px;
+        padding: 0;
+        font-family: Source Sans Pro, sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 21px;
+        color: #707683;
+        span {
+          display: block;
+          font-size: 13px;
+          line-height: 17px;
+        }
+      }
+    }
+  }
+
   .form-butons {
     display: flex;
     flex-direction: row;
@@ -361,6 +515,7 @@ form ::ng-deep {
         background: #fff;
         color: #4285f4;
         box-shadow: none;
+        padding: 15px 72px;
         &:hover {
           color: #fff;
           background: #3c7eea;
