--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fourth-step-creation/fourth-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fourth-step-creation/fourth-step-creation.component.scss
@@ -36,10 +36,9 @@ form {
     background: #f4f7fc;
     position: relative;
 
-    &:not(:first-of-type) {
-      margin-top: 30px;
-    }
+
     &.hiddenItem {
+      margin-bottom: 30px;
       .item-options {
         display: block;
         button {
@@ -118,6 +117,7 @@ form {
   display: flex;
   justify-content: flex-end;
   margin-top: 13px;
+  margin-bottom: 20px;
   button {
     padding: 10px 16px;
     font-size: 14px;
@@ -205,7 +205,14 @@ form::ng-deep {
     }
   }
 }
+.field-error::ng-deep {
 
+  quill-editor{
+    .ql-container {
+      box-shadow: inset 0 0 0 1px #f44336;
+    }
+  }
+}
 quill-editor::ng-deep {
   .ql-toolbar {
     background: #fff;
@@ -261,6 +268,7 @@ quill-editor::ng-deep {
       background: #fff;
       color: #4285f4;
       box-shadow: none;
+      padding: 15px 72px;
       &:hover {
         color: #fff;
         background: #3c7eea;
