--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/last-step-creation/last-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/last-step-creation/last-step-creation.component.html
@@ -1,9 +1,17 @@
 <div class="step-wrapper">
     <form #form="ngForm" >
       <h3>5. Готово к публикации</h3>
+      <section>
+          <h4>
+              Вы почти у цели!
+          </h4>
+          <p>
+              Публикуйте услугу и получайте уже первые заказы.
+          </p>
+      </section>
       <div class="form-butons">
         <button class="back" >сохранить и выйти</button>
-        <button class="save" (click)="publishOffer()">сохранить и продолжить</button>
+        <button class="save" (click)="publishOffer()">опубликовать</button>
       </div>
     </form>
   </div>
