--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/last-step-creation/last-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/last-step-creation/last-step-creation.component.scss
@@ -10,3 +10,79 @@
     margin-bottom: 19px;
   margin-top: 0;
   }
+
+
+  .form-butons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    button {
+      font-family: Source Sans Pro, sans-serif;
+      border: none;
+      border-radius: 4px;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 18px;
+      // color: #4285F4;
+      padding: 15px 65px;
+      cursor: pointer;
+      text-transform: uppercase;
+      &:first-of-type {
+        border: 1px solid #4285f4;
+        background: #fff;
+        color: #4285f4;
+        box-shadow: none;
+        padding: 15px 72px;
+        &:hover {
+          color: #fff;
+          background: #3c7eea;
+          box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
+        }
+      }
+
+      color: #fff;
+      background: #3c7eea;
+      box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
+      &:hover {
+        border: 1px solid #4285f4;
+        background: #fff;
+        color: #4285f4;
+        box-shadow: none;
+      }
+    }
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    width: 66%;
+  }
+
+  section {
+    width: 100%;
+    background: #fff;
+    box-shadow: 0px 4px 21px rgba(128, 152, 213, 0.07);
+    border-radius: 4px;
+    text-align: center;
+    padding: 50px 0;
+    margin: 30px 0;
+    h4 {
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 18px;
+      line-height: 23px;
+      text-align: center;
+      color: #323C47;
+      margin: 0 0 12px;
+      padding: 0;
+    }
+    p {
+      font-family: Source Sans Pro, sans-serif;
+      font-size: 16px;
+      line-height: 20px;
+      text-align: center;
+      color: #33596E;
+      opacity: 0.5;
+    }
+  }
