--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-extra-options/third-step-extra-options.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-extra-options/third-step-extra-options.component.html
@@ -6,51 +6,47 @@
   <div class="time-option">
     <div class="option-wrap">
       <div class="checkbox">
-        <input type="checkbox" name="time-to-do" class="tgl-classic"
-          [(ngModel)]="userService.compressedDeadlines.publishCompressedDeadlines" id="time-to-do">
+        <input type="checkbox" name="time-to-do" class="tgl-classic" [(ngModel)]="userService.compressedDeadlines.publishCompressedDeadlines" id="time-to-do">
         <label for="time-to-do"></label>
         <span class="options-name">Сжатые сроки</span>
       </div>
       <div class="options" *ngIf="userService.allPackages !== true">
         <span>Сделаю за</span>
-        <div>
+        <div [style.borderColor]="name.invalid ? '#f44336': '#dce0e6'">
           <div class=" select-wrap-extra">
-            <mat-select [(ngModel)]="userService.compressedDeadlines.basicCompressedDays" name="basicCompressedDays">
+            <mat-select #name="ngModel" [(ngModel)]="userService.compressedDeadlines.basicCompressedDays" [required]="userService.compressedDeadlines.publishCompressedDeadlines" name="basicCompressedDays">
               <mat-option *ngFor="let days of changesArrayCounter(); let i = index" [value]="days">
                 {{ days }}
               </mat-option>
             </mat-select>
           </div>
         </div>
-        <div class="price">
-          <input type="text" knifeOnlyNumbers maxlength="4"
-            [(ngModel)]="userService.compressedDeadlines.basicCompressedPrice" name="basicCompressedPrice"> <span
+        <div class="price" [style.borderColor]="name.invalid ? '#f44336': '#dce0e6'">
+          <input type="text" knifeOnlyNumbers maxlength="4" [(ngModel)]="userService.compressedDeadlines.basicCompressedPrice" #name="ngModel" [required]="userService.compressedDeadlines.publishCompressedDeadlines" name="basicCompressedPrice"> <span
             class="money">UAH</span>
         </div>
       </div>
-      <button class="show-pack-options" [ngClass]="optionsVisible ? 'up' : 'down'" (click)="showOptions()"
-        *ngIf="userService.allPackages == true"></button>
+      <button type="button" class="show-pack-options" [ngClass]="optionsVisible ? 'up' : 'down'" (click)="showOptions()" *ngIf="userService.allPackages"></button>
     </div>
     <!-------------------- Exta Options if All Packages -------------------->
-    <div class="all-types" [ngClass]="optionsVisible ? 'open' : 'closed'">
-      <div *ngIf="userService.allPackages === true">
+    <div class="all-types" *ngIf="userService.allPackages" [ngClass]="optionsVisible ? 'open' : 'closed'">
+      <div>
         <div>
           <div class="extraoption-title">Базовый</div>
           <div class="options">
             <span>Сделаю за</span>
-            <div>
+            <div [style.borderColor]="name.invalid ? '#f44336': '#dce0e6'">
               <div class=" select-wrap-extra">
-                <mat-select [(ngModel)]="userService.compressedDeadlines.basicCompressedDays"
-                  name="basicCompressedDays">
+                <mat-select [(ngModel)]="userService.compressedDeadlines.basicCompressedDays" #name="ngModel" [required]="userService.compressedDeadlines.publishCompressedDeadlines && userService.allPackages" name="basicCompressedDays">
                   <mat-option *ngFor="let days of changesArrayCounter(); let i = index" [value]="days">
                     {{ days }}
                   </mat-option>
                 </mat-select>
               </div>
             </div>
-            <div class="price">
-              <input type="text" knifeOnlyNumbers maxlength="4"
-                [(ngModel)]="userService.compressedDeadlines.basicCompressedPrice" name="basicCompressedPrice">
+            <div class="price" [style.borderColor]="name.invalid ? '#f44336': '#dce0e6'">
+              <input type="text" knifeOnlyNumbers maxlength="4" #name="ngModel" [required]="userService.compressedDeadlines.publishCompressedDeadlines && userService.allPackages" [(ngModel)]="userService.compressedDeadlines.basicCompressedPrice"
+                name="basicCompressedPrice">
               <span class="money">UAH</span>
             </div>
           </div>
@@ -59,18 +55,17 @@
           <div class="extraoption-title">Стандарт</div>
           <div class="options">
             <span>Сделаю за</span>
-            <div>
+            <div [style.borderColor]="name.invalid ? '#f44336': '#dce0e6'">
               <div class=" select-wrap-extra">
-                <mat-select [(ngModel)]="userService.compressedDeadlines.advancedCompressedDays"
-                  name="advancedCompressedDays">
+                <mat-select [(ngModel)]="userService.compressedDeadlines.advancedCompressedDays" #name="ngModel" [required]="userService.compressedDeadlines.publishCompressedDeadlines && userService.allPackages" name="advancedCompressedDays">
                   <mat-option *ngFor="let days of changesArrayCounter(); let i = index" [value]="days">
                     {{ days }}
                   </mat-option>
                 </mat-select>
               </div>
             </div>
-            <div class="price">
-              <input type="text" knifeOnlyNumbers maxlength="4" name="advancedCompressedPrice"
+            <div class="price" [style.borderColor]="name.invalid ? '#f44336': '#dce0e6'">
+              <input type="text" knifeOnlyNumbers maxlength="4" name="advancedCompressedPrice" #name="ngModel" [required]="userService.compressedDeadlines.publishCompressedDeadlines && userService.allPackages"
                 [(ngModel)]="userService.compressedDeadlines.advancedCompressedPrice"> <span class="money">UAH</span>
             </div>
           </div>
@@ -79,18 +74,17 @@
           <div class="extraoption-title">Премиум</div>
           <div class="options">
             <span>Сделаю за</span>
-            <div>
+            <div [style.borderColor]="name.invalid ? '#f44336': '#dce0e6'">
               <div class=" select-wrap-extra">
-                <mat-select name="premiumCompressedDays"
-                  [(ngModel)]="userService.compressedDeadlines.premiumCompressedDays">
+                <mat-select name="premiumCompressedDays" #name="ngModel" [required]="userService.compressedDeadlines.publishCompressedDeadlines && userService.allPackages" [(ngModel)]="userService.compressedDeadlines.premiumCompressedDays">
                   <mat-option *ngFor="let days of changesArrayCounter(); let i = index" [value]="days">
                     {{ days }}
                   </mat-option>
                 </mat-select>
               </div>
             </div>
-            <div class="price">
-              <input type="text" knifeOnlyNumbers maxlength="4" name="premiumCompressedPrice"
+            <div class="price" [style.borderColor]="name.invalid ? '#f44336': '#dce0e6'">
+              <input type="text" knifeOnlyNumbers maxlength="4" name="premiumCompressedPrice" #name="ngModel" [required]="userService.compressedDeadlines.publishCompressedDeadlines && userService.allPackages"
                 [(ngModel)]="userService.compressedDeadlines.premiumCompressedPrice"> <span class="money">UAH</span>
             </div>
           </div>
@@ -104,25 +98,24 @@
   <div class="deffault-field">
     <div class="option-wrap">
       <div class="checkbox">
-        <input type="checkbox" name="useExtraOfferChanges"
-          [(ngModel)]="userService.extraOfferChanges.publishExtraOfferChanges" class="tgl-classic" id="extra-changes">
+        <input type="checkbox" name="useExtraOfferChanges" [(ngModel)]="userService.extraOfferChanges.publishExtraOfferChanges" class="tgl-classic" id="extra-changes">
         <label for="extra-changes"></label>
         <span class="options-name">Дополнительные правки</span>
       </div>
       <div class="options">
         <span>Сделаю за</span>
-        <div>
+        <div [style.borderColor]="extraChangesDays.invalid ? '#f44336': '#dce0e6'">
           <div class=" select-wrap-extra">
-            <mat-select name="extraOfferChanges" [(ngModel)]="userService.extraOfferChanges.extraChangesDays">
+            <mat-select name="extraOfferChanges" [required]="userService.extraOfferChanges.publishExtraOfferChanges" [(ngModel)]="userService.extraOfferChanges.extraChangesDays" #extraChangesDays="ngModel">
               <mat-option *ngFor="let days of changesArrayCounter(); let i = index" [value]="days">
                 {{ days }}
               </mat-option>
             </mat-select>
           </div>
         </div>
-        <div class="price">
-          <input type="text" name="extraChangesPrice" knifeOnlyNumbers
-            [(ngModel)]="userService.extraOfferChanges.extraChangesPrice" maxlength="4"> <span class="money">UAH</span>
+        <div class="price" [style.borderColor]="extraChangesPrice.invalid ? '#f44336': '#dce0e6'">
+          <input type="text" name="extraChangesPrice" knifeOnlyNumbers [required]="userService.extraOfferChanges.publishExtraOfferChanges" #extraChangesPrice="ngModel" [(ngModel)]="userService.extraOfferChanges.extraChangesPrice" maxlength="4"> <span
+            class="money">UAH</span>
         </div>
       </div>
     </div>
@@ -132,16 +125,14 @@
   <div class="deffault-field">
     <div class="option-wrap">
       <div class="checkbox">
-        <input type="checkbox" name="useCommercialOffer" class="tgl-classic" id="commercial-use"
-          [(ngModel)]="userService.commercialOffer.publishCommercialOffer">
+        <input type="checkbox" name="useCommercialOffer" class="tgl-classic" id="commercial-use" [(ngModel)]="userService.commercialOffer.publishCommercialOffer">
         <label for="commercial-use"></label>
         <span class="options-name">Коммерческое использование</span>
       </div>
       <div class="options commercial">
         <span>Сделаю за</span>
-        <div class="price">
-          <input type="text" knifeOnlyNumbers maxlength="4"
-            [(ngModel)]="userService.commercialOffer.priceForCommercialOffer" name="priceForCommercialOffer"> <span
+        <div class="price" [style.borderColor]="name.invalid ? '#f44336': '#dce0e6'">
+          <input type="text" knifeOnlyNumbers maxlength="4" #name="ngModel" [required]="userService.commercialOffer.publishCommercialOffer" [(ngModel)]="userService.commercialOffer.priceForCommercialOffer" name="priceForCommercialOffer"> <span
             class="money">UAH</span>
         </div>
       </div>
@@ -152,8 +143,7 @@
 
   <!-- Add extra Option -->
   <form #addOptionForm="ngForm" class="secondary-extra-options">
-    <div class="secondary-extra-options-item" *ngFor="let option of userService.extra_features; let j = index"
-      [ngClass]="{ rolled: expandedOption !== j }">
+    <div class="secondary-extra-options-item" *ngFor="let option of userService.extra_features; let j = index" [ngClass]="{ rolled: expandedOption !== j+1 }">
       <div class="display-option" *ngIf="userService.extra_features.length > 0 && expandedOption !== j + 1 ">
         <div class="display-title">
           <!-- extra option bar -->
@@ -162,23 +152,22 @@
 
             <div class="option-wrap">
 
-                <i class="material-icons create" (click)="changeOption(j)">create</i>
+              <i class="material-icons create" (click)="changeOption(j+1)">create</i>
               <i class="material-icons delete-pack" (click)="deleteExtraOption(j)">delete</i>
               <div class="checkbox">
-                    <input type="checkbox" name="publish-option" class="tgl-classic" id="publish-extra-option-{{ j }}"
-                    [(ngModel)]="userService.extra_features[j].optionPublish">
-                  <label for="publish-extra-option-{{ j }}"></label>
+                <input type="checkbox" name="publish-option-{{j}}" class="tgl-classic" id="publish-extra-option-{{ j }}" #name="ngModel" [(ngModel)]="userService.extra_features[j].optionPublish">
+                <label for="publish-extra-option-{{ j }}"></label>
                 <span class="options-name">{{ userService.extra_features[j].optionTitle }}</span>
               </div>
               <div class="options">
                 <span>Сделаю за</span>
-                <div>
+                <div [style.borderColor]="name.invalid && submited ? '#f44336': '#dce0e6'">
                   <div class="select-wrap-extra">
 
                     {{ userService.extra_features[j].optionPrice }}
                   </div>
                 </div>
-                <div class="price">
+                <div class="price" [style.borderColor]="name.invalid && submited ? '#f44336': '#dce0e6'">
                   {{ userService.extra_features[j].optionCountDays }} <span class="money">UAH</span>
                 </div>
               </div>
@@ -189,16 +178,15 @@
       <div class="option-creation" [ngClass]="{ expanded: expandedOption === j+1 }">
         <div class="extra-option-title">
           <h5>Название опции</h5>
-          <div>
-            <input type="text" name="optionTitle" [(ngModel)]="userService.extra_features[j].optionTitle" required>
+          <div [style.borderColor]="name.invalid && submited ? '#f44336': '#dce0e6'">
+            <input type="text" #name="ngModel" name="optionTitle-{{j}}" [(ngModel)]="userService.extra_features[j].optionTitle" required>
           </div>
 
         </div>
         <div class="extra-option-description">
           <h5>Описание </h5>
-          <div>
-            <textarea name="optionDescription" [(ngModel)]="userService.extra_features[j].optionDescription"
-              required></textarea>
+          <div [style.borderColor]="name.invalid && submited ? '#f44336': '#dce0e6'">
+            <textarea name="optionDescription" [(ngModel)]="userService.extra_features[j].optionDescription" name="optionDescription-{{j}}" #name="ngModel" required></textarea>
           </div>
 
         </div>
@@ -208,18 +196,17 @@
 
               <div class="options">
                 <span>Сделаю за</span>
-                <div>
+                <div [style.borderColor]="name.invalid && submited ? '#f44336': '#dce0e6'">
                   <div class=" select-wrap-extra">
-                    <mat-select name="optionPrice" required [(ngModel)]="userService.extra_features[j].optionPrice">
+                    <mat-select name="optionPrice-{{j}}" required [(ngModel)]="userService.extra_features[j].optionPrice" #name="ngModel">
                       <mat-option *ngFor="let days of changesArrayCounter(); let i = index" [value]="days">
                         {{ days }}
                       </mat-option>
                     </mat-select>
                   </div>
                 </div>
-                <div class="price">
-                  <input type="text" name="optionPerTime" [(ngModel)]="userService.extra_features[j].optionCountDays"
-                    required knifeOnlyNumbers maxlength="4">
+                <div class="price" [style.borderColor]="name.invalid && submited ? '#f44336': '#dce0e6'">
+                  <input type="text" name="optionPerTime-{{j}}" [(ngModel)]="userService.extra_features[j].optionCountDays" #name="ngModel" required knifeOnlyNumbers maxlength="4">
                   <span class="money">UAH</span>
                 </div>
               </div>
@@ -231,8 +218,7 @@
   </form>
 
   <!---------- Add Extra field to secondary option ------->
-  <div class="add-option secondary-optins"
-    *ngIf=" !userService.extra_features || userService.extra_features.length < 10">
+  <div class="add-option secondary-optins" *ngIf=" !userService.extra_features || userService.extra_features.length < 10">
     <!-- [disabled]="packagesForm.controls['extraOptions'].invalid" -->
     <button class="add btn-tetraty" [disabled]="addOptionForm.invalid" (click)="addExtraOptin()">
       <i class="material-icons">
