--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.html
@@ -14,7 +14,7 @@
       <div class="service-photo">
         <img src="" alt="">
       </div>
-      <div class="offer-name" (clickOutside)="onClickedOutside($event)">
+      <div class="offer-name" >
         <h6>
           {{ userOffer.title }}
         </h6>
